--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+// @import './node_modules/@simonwep/pickr/dist/themes/monolith.min.css';
+@import '@simonwep/pickr/dist/themes/monolith.min.css';
+html, body {
+  margin: 0;
+}
